# stream-DAG

./: .gitignore  CMakeLists.txt  ChatLogic.cc  README.md  benchmark.cc  devlog.md  logic.py  trsce2mermaid.py  xmake.lua  开发记录.md
include/: brpc_utils.h  common.h  context.h  context2.h  executor.h  factory.h  graph.h  http.h  node.h  sinker.h  stream-dag.h  stream.h  to_json.h  utils.h  when_any.h
python/: pybind.cpp  pytest1.py
scripts/: gen_macro.py  start.py
test/: test_bing_simple.cc  test_bing_simple2.cc  test_bing_simple3.cc  test_http.cc  test_http_simple.cc  test_http_simple2.cc
workers/: bing_subgraph.h  bingnode.h  llm_model.h  output.h  safety.h  source.h
